# opencode-session-viewer

./: .gitignore  LOCAL_DEPLOY.md  README.md  deploy.sh  export_session.py  fmt.sh  index.html  package-lock.json  pyproject.toml  service.sh  setup.sh
app/: config.py  db.py  db_search.py  db_upstream.py  main.py  models.py  overrides_db.py  search_db.py  services.py  sync.py
app/static/css/: archived.css  base.css  conversation.css  dashboard.css  session.css
app/static/js/: archived.js  base.js  conversation.js  dashboard.js  session.js
app/templates/: archived.html  conversation.html  dashboard.html  session.html
local-deploy/launchd/: install.sh  restart.sh  start.sh  status.sh  stop.sh  uninstall.sh
local-deploy/nginx/: install.sh  uninstall.sh
local-deploy/systemd/: install.sh  restart.sh  start.sh  status.sh  stop.sh  uninstall.sh
tests/: conftest.py  test_api.py  test_db.py  test_db_search.py  test_services.py  test_sync.py
